<resources>
    <!--<string name="app_name">udn SPM OTP</string>-->
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="userTextView">TextView</string>
    <string name="otp_usage">
        1. 在 udn買東西綜合電商-登入驗證APP發送通知信中，會包含一張QR碼。\n
        2. 請利用本程式掃描該 QR 碼取得動態驗證碼。\n
        3. 如有問題請洽詢 udn買東西廠商服務組。
    </string>
    <string name="get_qrcode">取得 QR 碼</string>
    <string name="scan_qrcode">我知道了</string>
    <string name="permission_dialog_title">若拒絕授權使用相機，將無法取得驗證碼</string>
    <string name="permission_dialog_content">前往設定開啟相機權限</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="update">更新</string>
    <string name="setting">設定</string>
    <string name="error">錯誤</string>
    <string name="qrcode_error">無效的 QR 碼</string>
    <string name="pins_hint">
        1. 點擊右上角的相機圖案，進入手掃描畫面。\n\n
        2. 將郵件中的 QR 碼置於橘色框線中。\n\n
        3. 如果 QR 碼正確，會自動產生驗證碼。
    </string>
    <string name="send_qrcode_title">發送 QR 碼</string>
    <string name="email_hint">請輸入信箱</string>
    <string name="send_qrcode_context">我們將會將 QR 碼寄到您輸入的信箱</string>
    <string name="preference_file_key">com.udnshopping.udnsauthorizer.udn_prefs</string>
    <string name="update_dialog_title">通知</string>
    <string name="update_dialog_content">您好，新版本已經發佈，請更新後再使用，謝謝。</string>
    <string name="update_url">https://play.google.com/store/apps/details?id=com.udnshopping.udnsauthorizer</string>

    <string name="camera_error">Unable to access camera.</string>
</resources>
