<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="com.udnshopping.udnsauthorizer.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            tools:context=".view.MainActivity" >

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp" app:srcCompat="@drawable/ic_udn_otp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="110dp"/>
        <TextView
                android:id="@+id/textView2"
                android:text="@string/otp_usage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageView2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16dp" android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.49"
        />
        <Button
                android:text="@string/get_qrcode"
                android:textColor="@drawable/btn_text_color"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isEmailInput ? View.VISIBLE : View.GONE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/button_email" android:layout_marginBottom="40dp" android:layout_marginLeft="50dp"/>
        <!--android:visibility="visible"-->

        <Button
                android:text="@string/scan_qrcode"
                android:textColor="@drawable/btn_text_color"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/button_scan" android:layout_marginBottom="40dp" android:layout_marginRight="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>